# template-flutter-vue-python

./: README.md
back/: .env  common-commands.txt  documentation.txt  initial_sql_insert_data.sql  pyproject.toml  requirements.txt  run.py  unused-script-run-just-for-example.py
back/src/: main.py
back/src/dto/: account_dto.py
back/src/model/: account_model.py  account_type_model.py  membership_model.py  organization_model.py  product_type_model.py  team_model.py
back/src/model/association/: account_organization_model_association.py  account_organization_table_association.py  account_team_account_type_model_association.py
back/src/model/relationship/: account_organization_model.py  account_team_account_type_model.py
back/src/repository/: account_repository.py
back/src/resource/: account_resource.py  register_account_resource.py
back/src/server/: routes.py  server.py  server_config.py
back/src/service/: account_service.py
back/src/utils/: account_utils.py
front/: package.json
mobile/: README.md  docs.txt  documentation.txt  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/config/: config.dart
mobile/lib/models/: account_model.dart
mobile/lib/routes/: routes.dart
mobile/lib/service/: service.dart
mobile/lib/storage/: global_state.dart  local_storage.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
(+12 files in other folders)
