[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Davi Queiroz <dvbarreira@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
black = "^24.4.0"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
werkzeug = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
